--- a/doc/context/sources/general/manuals/luametafun/luametafun.tex
+++ b/doc/context/sources/general/manuals/luametafun/luametafun.tex
@@ -46,9 +46,9 @@
         \component luametafun-potrace
         \component luametafun-extensions
         \component luametafun-bytemaps
-%         \component luametafun-noise
+        \component luametafun-noise
         \component luametafun-interface
-%         \component luametafun-synchronizers
+      % \component luametafun-synchronizers
     \stopbodymatter
 
 \stopcomponent
