--- a/doc/context/sources/general/manuals/beyond/beyond-introduction.tex
+++ b/doc/context/sources/general/manuals/beyond/beyond-introduction.tex
@@ -14,10 +14,17 @@ ended up here but for us a turning point was when additional par passes became
 stable, which was around the time of the 2024 \CONTEXT\ meeting. We'll see what
 comes after that.
 
+Most of the chapters in this document were first published in \TUGBOAT, in which
+case we have a (year or so) delay in including it here; just become a \TUG\
+member if you want it sooner. We therefore want to explicitly mention that Karl
+Berry did an amazing job on copy-editing and getting it production ready in a way
+that we can still feed back fixes to the text. He not only improves the English
+but also catches glitches in our explanations. It just got better. Thanks Karl!
+
 \blank[2*big]
 
 \startlines
-Hans Hagen
+Hans Hagen \footnote {Various chapters in this document are co-authored by Mikael Sundqvist and|/|or Keith McKay.}
 Hasselt NL
 August 2024\high{++}
 \stoplines
