--- a/doc/context/sources/general/manuals/luametatex/luametatex.tex
+++ b/doc/context/sources/general/manuals/luametatex/luametatex.tex
@@ -8,7 +8,6 @@
 
 % \enabletrackers[callbacks.calls]
 
-
 % \pushoverloadmode
 
 % \nologbuffering
@@ -16,6 +15,9 @@
 % \enabletrackers[attributes.tracking]
 
 % \usemodule[system-attributes]
+
+% mkxl run stats  > tex properties: 938218 hash slots used of 2097152, 57142 control sequences, approximate memory usage: 127 MB
+% mkxl run stats  > tex properties: 495850 hash slots used of 2097152, 57142 control sequences, approximate memory usage: 127 MB
 
 \unprotect
 
