--- a/doc/context/sources/general/manuals/canbedone/canbedone.tex
+++ b/doc/context/sources/general/manuals/canbedone/canbedone.tex
@@ -22,11 +22,9 @@
     \startdocument[title=canbedone,color=middlegray]
     \stopdocument
 
-    \startsectionlevel[title=Periods]
-        \component [canbedone-periods]
-        \component [canbedone-clipping]
-    \stopsectionlevel
+    \startsectionlevel[title=Periods]  \component canbedone-periods.tex  \stopsectionlevel
+    \startsectionlevel[title=Clipping] \component canbedone-clipping.tex \stopsectionlevel
+    \startsectionlevel[title=External] \component canbedone-external.tex \stopsectionlevel
 
 \stoptext
-
 
