--- a/doc/context/sources/general/manuals/lowlevel/lowlevel-style.tex
+++ b/doc/context/sources/general/manuals/lowlevel/lowlevel-style.tex
@@ -10,6 +10,9 @@
 \usemodule[abbreviations-logos]
 \usemodule[scite]
 
+\setupexternalfigures
+  [location={local,global,default}]
+
 \setvariables
   [document]
   [title=No Title,
