--- a/doc/context/sources/general/manuals/luametafun/luametafun.tex
+++ b/doc/context/sources/general/manuals/luametafun/luametafun.tex
@@ -51,6 +51,7 @@
       % \component luametafun-synchronizers
         \component luametafun-performance
         \component luametafun-whatever
+        \component luametafun-oscillate
     \stopbodymatter
 
 \stopcomponent
