--- a/tex/context/modules/mkiv/s-abbreviations-logos.tex
+++ b/tex/context/modules/mkiv/s-abbreviations-logos.tex
@@ -266,6 +266,7 @@
 \logo [PSTOPDF]       {pstopdf}
 \logo [PSTRICKS]      {pstricks}
 \logo [PYTHON]        {Python}
+\logo [QRCODE]        {QRcode}
 \logo [RAID]          {raid}
 \logo [RAM]           {ram}
 \logo [RCA]           {RCA}
